kubernetes/apps/miniflux/app/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: miniflux
  namespace: miniflux
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Miniflux
    gethomepage.dev/group: Media
    gethomepage.dev/icon: miniflux.png
    gethomepage.dev/href: https://rss.${cluster_domain}
    gethomepage.dev/podSelector: app.kubernetes.io/name=miniflux
    gethomepage.dev/statusStyle: "dot"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`rss.${cluster_domain}`)
      kind: Rule
      services:
        - name: miniflux
          port: 8080
  tls: {}
